--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,50 @@
+2006-08-14  Douglas Bates  <bates@R-project.org>
+
+	* src/Csparse.[ch],init.c (Csparse_to_logical): Added utilities
+	Csparse_to_logical and Csparse_symmetric_to_general.
+	* R/dgCMatrix.R,dsCMatrix.R,Csparse.R : Consolidate general
+	coercion methods between CsparseMatrix and TsparseMatrix.	
+
+2006-08-14  Douglas Bates  <bates@R-project.org>
+
+	* R/dtCMatrix.R,dgCMatrix.R,Csparse.R src/init.c,dgCMatrix.[ch],
+	Csparse.[ch],chm_common.c,dense.c : Use CHOLMOD code and methods
+	for CsparseMatrix, TsparseMatrix, denseMatrix or matrix when
+	possible.
+
+2006-08-12  Douglas Bates  <bates@R-project.org>
+
+	* src/chm_common.[ch],Csparse.[ch],Tsparse.[ch],CHMfactor.c,dtTMatrix.c,
+	  dgTMatrix.c,dgCMatrix.c,dsCMatrix.c,dtTMatrix.c, R/dsTMatrix.R,
+	  Tsparse.R,Csparse.R,dgTMatrix.R,dsCMatrix.R,lsCMatrix.R:
+	  generalize conversions between TsparseMatrix, CsparseMatrix,
+	  denseMatrix and matrix.  Preserve triangularity property and
+	  propagate Dimnames in the easy cases.
+
+2006-08-10  Douglas Bates  <bates@R-project.org>
+
+	* src/lmer.c: adjust checks in glmer_init for S4SXP
+	* tests/validObj.R: check of all(eq) should be all(eq@x) - worked
+	before S4SXP but for the wrong reasons.
+
+2006-08-08  Douglas Bates  <bates@R-project.org>
+
+	* src/Csparse.c (Csparse_crossprod): tcrossprod result has stype = -1.
+	Later modified to return the upper triangle only.
+	* R/dgTMatrix.R: Remove vestigial crossprod and tcrossprod methods.
+	
+2006-08-07  Douglas Bates  <bates@R-project.org>
+
+	* src/Csparse.c (Csparse_crossprod): Set stype on result to avoid
+	R-level conversion to a sparse symmetric class.
+	* R/Tsparse.R,R/Csparse.R (crossprod and tcrossprod methods):
+	Remove conversion to sparse symmetric classes (now done in C code).
+
+2006-08-07  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/dgCMatrix.R: disable old crossprod and tcrossprod methods
+	* man/band.Rd:  adapt the \dontshow{} unit test.
+
 2006-08-07  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.995-14  for CRAN
@@ -9,8 +56,8 @@
 
 	* R/Auxiliaries.R (as_Tsparse, as_Rsparse): new
 	* R/Tsparse.R (tril, triu, band): methods
-	* R/dgRMatrix.R (tril, ...):	dito
-	* man/band.Rd:			dito
+	* R/dgRMatrix.R (tril, ...):	ditto
+	* man/band.Rd:			ditto
 
 2006-08-04  Martin Maechler  <maechler@stat.math.ethz.ch>
 
@@ -49,8 +96,8 @@
 
 	* NAMESPACE:    change  "correlation" to "corMatrix"
 	* R/AllClass.R: to avoid clash with S3 class in 'nlme'.
-	* R/dpoMatrix.R: dito
-	* R/lmer.R:	 dito
+	* R/dpoMatrix.R: ditto
+	* R/lmer.R:	 ditto
 
 2006-07-28  Douglas Bates  <bates@R-project.org>
 
@@ -225,7 +272,7 @@
 
 	* R/sparseMatrix.R: Matrix <-> graph methods: can no longer use
 	the C code depending on a slot structure that's no longer valid.
-	* src/dgTMatrix.c: dito (also: src/init.c src/dgTMatrix.h)
+	* src/dgTMatrix.c: ditto (also: src/init.c src/dgTMatrix.h)
 
 
 2006-05-17  Douglas Bates  <bates@stat.wisc.edu>
@@ -348,7 +395,7 @@
 	* data/KNex.rda: replacing 'mm' and 'y' by KNex <- list(mm=mm, y=y)
 	* man/KNex.Rd: and other help files
 	* tests/*.R: several ones needed adaption
-	* inst/doc/Comparisons.Rnw: dito
+	* inst/doc/Comparisons.Rnw: ditto
 
 2006-03-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
@@ -552,7 +599,7 @@
 2005-08-26  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/Matrix.R:  added first "[<-" methods; not yet functional
-	* R/denseMatrix.R: dito
+	* R/denseMatrix.R: ditto
 	* man/Subassign-methods.Rd: new help file for these
 
 2005-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>
