--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,56 @@
+2006-12-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R (prSpMatrix): "." alignment much improved:
+	align with proper position of "0", i.e., right for integers.
+	argument 'align' by default is "fancy".
+
+2006-12-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sparseMatrix.R: delegate "Compare" to "Csparse.."
+	* R/Csparse.R: and fix "Compare" for more cases.
+	* tests/Class+Meth.R: test some of these (m == m, m != m)
+
+2006-12-13  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/lsparseMatrix.R: all() and any() methods
+	* R/ldenseMatrix.R:	 ditto
+	* NAMESPACE, R/Matrix.R: ditto
+
+	* man/all-methods.Rd: document them minimally
+
+	* tests/simple.R: add a few examples for these
+
+2006-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Tsparse.R ([): fix long standing typo in symmetric case
+	* man/dsCMatrix-class.Rd: add example exhibiting the above case
+
+2006-12-10  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/CHMfactor.c (CHMfactor_to_sparse): change LDL factorization
+	to LL before converting to a sparse matrix. (The LDL form can be
+	converted to a sparse matrix but it is implicitly a unit
+	triangular matrix and a diagonal matrix overwritten on the diagonal.)
+
+2006-12-09  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/chm_common.c (chm_factor_to_SEXP): allocate and fill the Dim slot.
+
+2006-12-08  Douglas Bates  <bates@stat.wisc.edu>
+
+	* DESCRIPTION (Version): updated -> release 0.9975-7
+	* src/{init.c,chm_common.c}, inst/include/*: export cholmod_analyze_p
+
+2006-11-30  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/diagMatrix.R (%*%): write a direct [diag o Csparse] method
+
+2006-11-29  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/dgeMatrix.c (dgeMatrix_solve): Check error code from dgetri.
+	* tests/dg_Matrix.R: Add Barry Rowlingson's test of a matrix that
+	is exactly singular.
+
 2006-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Date): updated -> release 0.9975-6
