--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-16  Douglas Bates  <bates@r-project.org>
+
+	* DESCRIPTION (Date, Version): 0.9975-11 with new date
+	* src/dgCMatrix.c (R_to_CMatrix, compressed_to_TMatrix): remove
+	const modifier on declaration of the array 'valid'
+
+2007-02-12  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/CHMfactor.R: Add image method (coercion to sparseMatrix).
+
 2007-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Date, Version): 0.9975-10 with new date.
